--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Galgeleg</string>
+    <string name="title_activity_gamemode">activity_gamemode</string>
+    <!--
+    This string is used for square devices and overridden by hello_world in
+    values-round/strings.xml for round devices.
+    -->
+    <string name="hello_world">Hello Square World!</string>
+    <string name="title_activity_won">activity_won</string>
+    <string name="title_activity_lost">activity_lost</string>
 </resources>
