--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Galgeleg</string>
+    <string name="app_name">s195456 bryanis Galgeleg</string>
     <string name="title_activity_gamemode">activity_gamemode</string>
     <!--
     This string is used for square devices and overridden by hello_world in
